- Updated the `main.go` in the trip-service to register the new route and modified the `viewPastTripsForPassenger` function in the console app to utilize the new endpoint correctly.
- This feature allows passengers to view a complete history of their trips, ensuring better transparency and record-keeping.

[1.1.2] - 14/12/2023
- Implement the 'viewEnrolledTrips' function in the console application.
- Create an endpoint in the trip service to handle fetching of enrolled trips by passenger ID.
- Update the console app to make an HTTP GET request to retrieve and display trips where the user is enrolled.
- Ensure the response handling includes cases for no trips found and potential errors.

[1.1.1] - 14/12/2023
 - Fixed type mismatch in already.
 - Enrolled function and ensured each passenger can only enroll once per trip. 
 - Transaction handling in enroll function ensures data integrity for seat reservation and counts.

[1.1.0] - 14/12/2023
- Implemented a new endpoint `/available-trips` that lists all non-deleted trips with available seats. 
- This allows passengers to browse through all currently available trips they can enroll in. 
- The endpoint filters trips using the `deleted_at IS NULL AND available_seats > 0` condition, ensuring only active and open trips are shown.

Modified the handlers and route configurations to serve the new endpoint. The Trip model's soft deletion and available seats features are utilized to provide the correct data.

[1.0.9] - 14/12/2023
- Implemented the 'viewPastTrips' function in the main console application, enabling users to list all trips that have been soft-deleted. 
- Fetches the past trips from the backend server and displays them to the user with relevant details such as Trip ID, pickup location, destination, and scheduled time. 
- Ensured error handling for server responses and empty lists, and provided a smooth return flow to the main menu after viewing the trips.
- Auto-schedule to delete trips that is overdue
